--- a/HomeBrokerPOO/nbproject/project.properties
+++ b/HomeBrokerPOO/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/HomeBrokerPOO.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-8.0.12.jar=C:\\Users\\jp_te\\Downloads\\ADS\\Orienta\u00e7\u00e3o a Objetos\\NetBeans\\JAR\\mysql-connector-java-8.0.12.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
