--- a/HomeBrokerPOO/nbproject/private/private.properties
+++ b/HomeBrokerPOO/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.mysql-connector-java-8.0.12.jar=C:\\Users\\jp_te\\Downloads\\HomeBrokerPOO-main\\HomeBrokerPOO\\mysql-connector-java-8.0.12.jar
 user.properties.file=C:\\Users\\jp_te\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
